feat(ui): add controller for ui
- Created a new language for UI controlling.
- Added vm for interpreting ui lang.
- Added example home ui.
- Added locale file for zh-CN.
- Updated Makefile.

--- a/src/uic/i18n/zh-CN.yaml
+++ b/src/uic/i18n/zh-CN.yaml
@@ -1,6 +1,12 @@
-ops:
-  title:
-    hints:
-      - 如果有什么需要, 就尽管提出来吧!
-    nop:
-      - 现在无事可做! 你想要...?
+Home:
+  Title:
+    - 欢迎使用 A2!
+    - 你——好!
+  Greeting1:
+    - 有不错的想法?
+  Greeting2:
+    - 新的冒险, 从 A2 这里开启!
+  Exit: 离开
+Op:
+  Title:
+    - 如果想要什么, 就提出你的需求!
