feat(ui): add local account creation
- Added guide add account page.
- Added account type choose page.
- Added local account creation.
- Updated Makefile.

IN PROGRESS

--- a/src/uic/i18n/zh-CN.yaml
+++ b/src/uic/i18n/zh-CN.yaml
@@ -4,8 +4,9 @@ Guide:
     Hello: |
       初次见面, 请多关照!
       在接下来的几分钟里, 我们会引导你上手 A2.
-
       按右边的按钮继续.
+
+      PS: 按带绿色星星的按钮总是最稳妥的方法!
     OK: 好的 (乖巧)
     Ignore: 下次一定
     Hint:
@@ -49,6 +50,34 @@ Guide:
       MC 需要登录帐户来游玩, 我们现在就做这个!
       按右边的按钮开始!
     Btn: 继续
+
+Account:
+  NewAccount:
+    ChooseType:
+      Title: 添加哪种帐户?
+      Desc: |
+        选择要添加的类型.
+        如果不知道怎么选, 就看看按钮上面的说明!
+
+        PS: 如果不知道有没有, 那就是没有!
+      Tag:
+        MS: 登录正版帐户!
+        YG: 要用皮肤站, 就选这个!
+        LC: 现在不想登录?
+      WarnYG: 我知道我在做什么!
+      Optn:
+        MS: 微软帐户
+        YG: 外置登录
+        LC: 本地帐户
+    Local:
+      Title: 你的名字是...?
+      Desc: |
+        这会是你在游戏里面的名字.
+      Tag: |
+        能回忆起你的名字吗?
+        你的名字长度为 3-16, 只能使用字母, 数字和下划线.
+      Ph: Player
+
 Home:
   Title:
     - 欢迎使用 A2!
@@ -60,3 +89,7 @@ Home:
     - 那么, 新的冒险, 即刻开启!
     - 生命不息, 探索不止, 出发!
   Exit: 离开
+
+Commons:
+  Submit: 点击任意处继续
+  SubmitFail: 检查你的输入...
