--- a/src/uic/i18n/zh-CN.yaml
+++ b/src/uic/i18n/zh-CN.yaml
@@ -262,3 +262,28 @@ Commons:
   Submit: 点击这里以继续
   SubmitFail: 检查你的输入...
   Connecting: 正在连接 {Host}
+
+FlowSteps:
+  1: 正在获取版本列表
+  2: 正在读取版本信息
+  3: 正在下载启动档案
+  4: 正在下载客户端
+  6: 正在解包支援库
+  7: 正在下载支援库
+  8: 正在获取资源列表
+  9: 正在下载游戏资源
+  10: 正在生成启动命令
+  11: 正在创建游戏主进程
+  12: 正在复制缓存文件
+  13: 正在扫描支援库
+  14: 正在选定 JVM
+  15: 正在读取启动档案
+  16: 正在连接启动档案
+  17: 正在连接客户端
+  18: 正在验证帐户
+  20: 正在复制游戏资源
+  21: 正在读取资源列表
+  22: 正在下载 JVM
+  23: 正在扫描 JVM
+  24: 正在读取游戏档案
+  25: 正在安装 Mod 加载器
