feat(ui): add cancel to ui
- Allow user to cancel progress by press esc.
- Fixed wrong icon location in compact btn.
- Corrected carry flag usage in ms account auth.

--- a/src/uic/i18n/zh-CN.yaml
+++ b/src/uic/i18n/zh-CN.yaml
@@ -262,6 +262,9 @@ Commons:
   Submit: 点击这里以继续
   SubmitFail: 检查你的输入...
   Connecting: 正在连接 {Host}
+  Cancel: |
+    <b>取消操作可能会丢失数据!</b>
+    如果你坚持, 请再按一下 Esc.
 
 FlowSteps:
   1: 正在获取版本列表
