perf(dl): add mirror
- Added bmclapi source mirror for better performance.

CHECKED

--- a/src/uic/i18n/zh-CN.yaml
+++ b/src/uic/i18n/zh-CN.yaml
@@ -137,9 +137,7 @@ GameProfile:
       Desc: |
         我们正在下载一些必要的文件.
         这可能需要几分钟, 取决于你的网络速度.
-
-        进度条可能多次读满后归零, 因为有多个步骤要执行.
-        你可以随时按 Tab 打开日志查看当前状况.
+        在中国大陆, BMCLAPI 为你提供加速下载服务.
 
     SelectAccount:
       Title: 你想如何登录游戏?
