feat(ui): add press confirm in ui
- Buttons must be pressed for a while to be clicked.

--- a/src/uic/i18n/zh-CN.yaml
+++ b/src/uic/i18n/zh-CN.yaml
@@ -4,13 +4,13 @@ Guide:
     Hello: |
       初次见面, 请多关照!
       在接下来的几分钟里, 我们会引导你上手 A2.
-      按右边的按钮继续.
+      <b>按住</b>右边的按钮继续.
 
       PS: 按带绿色星星的按钮总是最稳妥的方法!
-    OK: 好的 (乖巧)
+    OK: 好的 (伸出手)
     Ignore: 下次一定
     Hint:
-      Opt: 这个按钮在跳动, 点它就对了!
+      Opt: 按住按钮, 不要松开!
       Warn: 一般不点橙色的按钮, 除非你很有经验!
   JRECheck:
     Title: 正在检查 Java 环境...
