perf(ui): update locale to fit name change
- Updated names in ui.

--- a/src/uic/i18n/zh-CN.yaml
+++ b/src/uic/i18n/zh-CN.yaml
@@ -3,7 +3,9 @@ Guide:
     Title: 你——好!
     Hello: |
       初次见面, 请多关照!
-      在接下来的几分钟里, 我们会引导你上手 A2.
+
+      欢迎来到 Ari!
+      接下来我们将做一个简短的介绍.
       <b>按住</b>右边的按钮继续.
 
       PS: 按带绿色星星的按钮总是最稳妥的方法!
@@ -59,7 +61,7 @@ Guide:
     Title: 教程结束
     Desc: |
       引导部分到此结束了.
-      相信你已经了解了 A2 的用法!
+      相信你已经了解了 Ari 的用法!
       按下右侧的按钮后, 我们将回到主页.
     Home: 完成
 
@@ -250,7 +252,7 @@ Account:
       Title: 诶...请小心!
       Desc: |
         你正在尝试登录 {ServerAddr}
-        这个服务器未经 A2 的验证, 我们不能确保它安全!
+        这个服务器未经 Ari 的验证, 我们不能确保它安全!
 
         <b>绝不要在你不认识的服务器上输入用户名和密码!</b>
       Continue:
@@ -296,7 +298,7 @@ Home:
   OpenFolderTag: 打开游戏目录, 安装 Mod 或材质包.
   Exit: 退出
   ExitWarn: 你确定吗?
-  ExitTag: 退出 A2.
+  ExitTag: 退出 Ari.
 
 Launch:
   Select:
@@ -316,7 +318,7 @@ Launch:
     Title: 游戏运行中
     Desc: |
       游戏已经成功启动. 开始畅玩吧!
-      A2 会持续监测游戏状况, 如果遇到问题会通知你.
+      Ari 会持续监测游戏状况, 如果遇到问题会通知你.
 
   LaunchFail:
     Title: 游戏启动失败...
@@ -333,7 +335,7 @@ Launch:
       我们发现游戏不正常地终止了.
       游戏有没有正常运行?
 
-      A2 的崩溃分析功能在开发中, 很快将会上线.
+      Ari 的崩溃分析功能在开发中, 很快将会上线.
       但现在, 我们可以帮助你重新启动.
     Fine:
       Tag: 如果游戏已经正常运行, 这可能是误判.
