feat(ui): finalize mod install pages
- Added mod install complete page.

--- a/src/uic/i18n/zh-CN.yaml
+++ b/src/uic/i18n/zh-CN.yaml
@@ -339,6 +339,13 @@ ModManage:
     Desc: |
       选择要添加到游戏中的模组.
       请注意: 本页支持多项选择! 单击即可选中.
+  Finish:
+    Title: 模组已安装
+    Desc: 已经完成模组的安装.
+    Warn: |
+      有些模组可能不兼容或者下载失败.
+      你可以打开游戏文件夹查看它们.
+    Btn: 完成
 
 Launch:
   Select:
